Add index to root directory

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css"
     />
-    <link rel="stylesheet" href="output.css" />
+    <link rel="stylesheet" href="/public/output.css" />
     <title>FindJobLineria</title>
   </head>
   <body>
