Readded the index to the public

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css"
     />
-    <link rel="stylesheet" href="/public/output.css" />
+    <link rel="stylesheet" href="output.css" />
     <title>FindJobLineria</title>
   </head>
   <body>
@@ -63,7 +63,7 @@
               <h1
                 class="mb-6 text-4xl sm:text-4xl sm:mt font-semibold md:text-6xl lg:text-6xl sm:capitalize"
               >
-                Bringing your dream  <br>job closer
+                Bringing your dream <br />job closer
               </h1>
               <button
                 type="button"
