--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <title>FindJobLineria</title>
   </head>
   <body>
-    <nav class="bg-slate-950 p-1">
+    <nav class="bg-slate-950 p-1 sticky top-0">
       <!-- This is the navitation -->
       <div
         class="flex items-center justify-between flex-wrap xl:mx-20 lg:mx-30"
@@ -61,13 +61,15 @@
           <div class="flex h-full items-center justify-center">
             <div class="text-white px-4">
               <h1
-                class="mb-6 text-4xl sm:text-4xl sm:mt font-semibold md:text-6xl lg:text-6xl sm:capitalize"
+                class="mb-6 text-4xl sm:text-4xl sm:mt font-semibold md:text-6xl lg:text-5xl sm:capitalize leading-tight md:leading-snug lg:leading-tight xl:text-6xl"
               >
-                Bringing your dream <br />job closer
+                Bringing your dream <br />
+                job closer
               </h1>
+
               <button
                 type="button"
-                class="rounded border-2 border-neutral-50 px-4 py-2 text-sm font-medium uppercase leading-normal text-neutral-50 transition duration-150 ease-in-out hover:border-neutral-100 hover:bg-neutral-500 hover:bg-opacity-10 hover:text-neutral-100 focus:border-neutral-100 focus:text-neutral-100 focus:outline-none focus:ring-0 active:border-neutral-200 active:text-neutral-200"
+                class="rounded border-2 border-neutral-50 sm:text:xl px-4 py-2 text-sm font-medium uppercase leading-normal text-neutral-50 transition duration-150 ease-in-out hover:border-neutral-100 hover:bg-neutral-500 hover:bg-opacity-10 hover:text-neutral-100 focus:border-neutral-100 focus:text-neutral-100 focus:outline-none focus:ring-0 active:border-neutral-200 active:text-neutral-200"
                 data-twe-ripple-init
                 data-twe-ripple-color="light"
               >
@@ -79,18 +81,18 @@
       </div>
     </header>
 
-    <section class="flex justify-center sm:mx-24 sm:mb-4">
+    <section class="flex justify-center sm:mb-4 sm:mx-17 lg:mt-8">
       <div
-        class="flex justify-between items-center text-4xl pt-16 mx-10 w-full max-w-6xl"
+        class="flex justify-between items-center text-4xl pt-16 mx-14 w-full max-w-6xl"
       >
         <h3
-          class="font-semibold sm:whitespace-nowrap sm:mr-20 whitespace-nowrap text-xl"
+          class="font-semibold sm:whitespace-nowrap sm:mr-20 whitespace-nowrap text-xl sm:text:xl lg:text-3xl xl:text-4xl xl:ml-4"
         >
           Our Features Jobs
         </h3>
         <button
           type="button"
-          class="rounded-full bg-black text-white px-5 py-1 text-xs font-medium capitalize flex items-center"
+          class="rounded-full bg-black sm:whitespace-nowrap text-white px-5 text-xs sm:text:xs font-medium capitalize flex items-center xl:mr-6"
         >
           view all
           <span class="mdi mdi-arrow-right text-lg"></span>
@@ -99,159 +101,211 @@
     </section>
 
     <!-- THis is the job features -->
-    <section class="grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 gap-2 mx-10">
-      <div class="border rounded border-black shadow-lg p-4 m-2">
-        <div class="flex">
+    <section
+      class="grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 gap-2 mx-10 md:mx-1 lg:mx-5 xl:max-w-6xl xl:mx-auto 2xl:max-w-[1375px] 2lx:mx-auto"
+    >
+      <div class="border rounded shadow-md p-4 m-2">
+        <div class="flex flex-wrap md:flex-nowrap md:mr-1">
           <p
-            class="border border-black text-sm rounded-full py-1 px-4 mx-1 shadow-md sm:text-sm"
+            class="border border-black text-sm rounded-full py-1 px-4 md:px-1 lg:px-2 mx-1 md:mx-1 shadow-md sm:text-sm lg:text-sm lg:items-center md:text-xs md:py-0 md:whitespace-nowrap"
           >
             Full Time
           </p>
           <p
-            class="border border-black rounded-full py-1 px-4 mx-1 shadow-md sm:text-sm"
+            class="border border-black rounded-full py-1 px-4 mx-1 shadow-md sm:text-sm md:text-xs lg:text-sm lg:items-center md:py-0 md:whitespace-nowrap"
           >
             Glendale CA
           </p>
         </div>
+
         <div class="flex gap-2 items-center ml-2">
           <span
-            class="mdi mdi-spotify text-xl border border-black rounded-full py-0 px-1 mt-2 text-[#1DBE10]"
+            class="mdi mdi-spotify sm:mt-4 text-xl border border-black rounded-full py-0 px-1 mt-2 text-[#1DBE10]"
           ></span>
-          <p class="text-1xl font-bold">Product Manager</p>
+          <p class="text-xl font-bold sm:mt-4 md:mt-4 md:text-sm lg:md:text-lg">
+            Product Manager
+          </p>
+        </div>
+
+        <div>
+          <p
+            class="ml-5 sm:text-sm sm:m-1 mt-4 sm:whitespace-nowrap sm:text-center sm:mt-4 4 md:text-xs lg:md:text-base xl:mr-20"
+          >
+            Marketing | $2,000 -5,000 /Monthly
+          </p>
+        </div>
+
+        <button class="apply-btn md:w-full md:text-center">Apply Now</button>
+      </div>
+
+      <div class="border rounded shadow-md p-4 m-2">
+        <div class="flex flex-wrap md:flex-nowrap md:mr-1">
+          <p
+            class="border border-black text-sm rounded-full py-1 px-4 md:px-1 lg:px-2 mx-1 md:mx-1 shadow-md sm:text-sm lg:text-sm lg:items-center md:text-xs md:py-0 md:whitespace-nowrap"
+          >
+            Full Time
+          </p>
+          <p
+            class="border border-black rounded-full py-1 px-4 mx-1 shadow-md sm:text-sm md:text-xs lg:text-sm lg:items-center md:py-0 md:whitespace-nowrap"
+          >
+            Glendale CA
+          </p>
+        </div>
+
+        <div class="flex gap-2 items-center ml-2">
+          <span
+            class="mdi mdi-pinterest text-xl border sm:mt-4 border-black rounded-full py-0 px-1 mt-2 text-[#C62E2E]"
+          ></span>
+          <p
+            class="text-1xl mt-3 font-bold sm:mt-4 md:mt-4 md:text-sm lg:md:text-lg"
+          >
+            Product Designer
+          </p>
         </div>
         <div>
           <p
-            class="ml-5 sm:m-1 mt-4 sm:whitespace-nowrap sm:text-center sm:mt-3"
+            class="ml-5 sm:text-sm sm:m-1 mt-4 sm:whitespace-nowrap sm:text-center sm:mt-4 4 md:text-xs lg:md:text-base xl:mr-20"
           >
-            Marking | $2,000 -5,000 /Monthly
+            Marketing | $2,000 -5,000 /Monthly
           </p>
         </div>
-        <button class="apply-btn">Apply Now</button>
+        <button class="apply-btn md:w-full md:text-center">Apply Now</button>
       </div>
 
-      <div class="border rounded border-black shadow-lg p-4 m-2">
-        <div class="flex">
+      <div class="border rounded shadow-md p-4 m-2">
+        <div class="flex flex-wrap md:flex-nowrap md:mr-1">
           <p
-            class="border border-black rounded-full py-1 px-4 mx-1 shadow-md sm:text-sm"
+            class="border border-black text-sm rounded-full py-1 px-4 md:px-1 lg:px-2 mx-1 md:mx-1 shadow-md sm:text-sm lg:text-sm lg:items-center md:text-xs md:py-0 md:whitespace-nowrap"
           >
             Full Time
           </p>
           <p
-            class="border border-black rounded-full py-1 px-4 mx-1 shadow-md sm:text-sm"
+            class="border border-black rounded-full py-1 px-4 mx-1 shadow-md sm:text-sm md:text-xs lg:text-sm lg:items-center md:py-0 md:whitespace-nowrap"
           >
             Glendale CA
           </p>
         </div>
+
         <div class="flex gap-2 items-center ml-2">
           <span
-            class="mdi mdi-pinterest text-xl border border-black rounded-full py-0 px-1 mt-2 text-[#C62E2E]"
+            class="mdi mdi-google text-xl border sm:mt-4 border-black rounded-full py-0 px-1 mt-2"
           ></span>
-          <p class="text-1xl mt-3 font-bold">Product Designer</p>
+          <p
+            class="text-1xl sm:text-sm mt-3 font-bold sm:mt-4 md:mt-4 md:text-sm md:whitespace-nowrap lg:md:text-lg"
+          >
+            Recruiting Coordinator
+          </p>
         </div>
-        <p class="ml-5 sm:m-1 mt-4 sm:whitespace-nowrap sm:text-center sm:mt-3">
-          Marking | $2,000 -5,000 /Monthly
-        </p>
-        <button class="apply-btn">Apply Now</button>
+        <div>
+          <p
+            class="ml-5 sm:text-sm sm:m-1 mt-4 sm:whitespace-nowrap sm:text-center sm:mt-4 4 md:text-xs lg:md:text-base xl:mr-20"
+          >
+            Marketing | $2,000 -5,000 /Monthly
+          </p>
+        </div>
+        <button class="apply-btn md:w-full md:text-center">Apply Now</button>
       </div>
 
-      <div class="border rounded border-black shadow-lg p-4 m-2">
-        <div class="flex">
+      <div class="border rounded shadow-md p-4 m-2">
+        <div class="flex flex-wrap md:flex-nowrap md:mr-1">
           <p
-            class="border border-black rounded-full py-1 px-4 mx-1 shadow-md sm:text-sm"
+            class="border border-black text-sm rounded-full py-1 px-4 md:px-1 lg:px-2 mx-1 md:mx-1 shadow-md sm:text-sm lg:text-sm lg:items-center md:text-xs md:py-0 md:whitespace-nowrap"
           >
             Full Time
           </p>
           <p
-            class="border border-black rounded-full py-1 px-4 mx-1 shadow-md sm:text-sm"
+            class="border border-black rounded-full py-1 px-4 mx-1 shadow-md sm:text-sm md:text-xs lg:text-sm lg:items-center md:py-0 md:whitespace-nowrap"
           >
             Glendale CA
           </p>
         </div>
+
         <div class="flex gap-2 items-center ml-2">
           <span
-            class="mdi mdi-google text-xl border border-black rounded-full py-0 px-1 mt-2"
+            class="mdi mdi-facebook text-xl border sm:mt-4 border-black rounded-full py-0 px-1 mt-2 text-[#ced9ef]"
           ></span>
-          <p class="text-1xl mt-3 font-bold">Recruiting Coordinator</p>
+          <p
+            class="text-1xl mt-3 font-bold sm:mt-4 md:mt-4 md:text-sm lg:md:text-lg"
+          >
+            UI/UX Designer
+          </p>
         </div>
-        <p class="ml-5 sm:m-1 mt-4 sm:whitespace-nowrap sm:text-center sm:mt-3">
-          Marking | $2,000 -5,000 /Monthly
-        </p>
-        <button class="apply-btn">Apply Now</button>
+        <div>
+          <p
+            class="ml-5 sm:text-sm sm:m-1 mt-4 sm:whitespace-nowrap sm:text-center sm:mt-4 4 md:text-xs lg:md:text-base xl:mr-20"
+          >
+            Marketing | $2,000 -5,000 /Monthly
+          </p>
+        </div>
+        <button class="apply-btn md:w-full md:text-center">Apply Now</button>
       </div>
 
-      <div class="border rounded border-black shadow-lg p-4 m-2">
-        <div class="flex">
+      <div class="border rounded shadow-md p-4 m-2">
+        <div class="flex flex-wrap md:flex-nowrap md:mr-1">
           <p
-            class="border border-black rounded-full py-1 px-4 mx-1 shadow-md sm:text-sm"
+            class="border border-black text-sm rounded-full py-1 px-4 md:px-1 lg:px-2 mx-1 md:mx-1 shadow-md sm:text-sm lg:text-sm lg:items-center md:text-xs md:py-0 md:whitespace-nowrap"
           >
             Full Time
           </p>
           <p
-            class="border border-black rounded-full py-1 px-4 mx-1 shadow-md sm:text-sm"
+            class="border border-black rounded-full py-1 px-4 mx-1 shadow-md sm:text-sm md:text-xs lg:text-sm lg:items-center md:py-0 md:whitespace-nowrap"
           >
             Glendale CA
           </p>
         </div>
+
         <div class="flex gap-2 items-center ml-2">
           <span
-            class="mdi mdi-facebook text-xl border border-black rounded-full py-0 px-1 mt-2 text-[#4267B2]"
+            class="mdi mdi-twitter text-xl border sm:mt-4 border-black rounded-full py-0 px-1 mt-2 text-[#1DA1F2]"
           ></span>
-          <p class="text-1xl mt-3 font-bold">UI/UX Designer</p>
+          <p class="text-1xl sm:text-sm mt-3 font-bold sm:mt-4 lg:md:text-lg">
+            Marketing Specialist
+          </p>
         </div>
-        <p class="ml-5 sm:m-1 mt-4 sm:whitespace-nowrap sm:text-center sm:mt-3">
-          Marking | $2,000 -5,000 /Monthly
-        </p>
-        <button class="apply-btn">Apply Now</button>
+        <div>
+          <p
+            class="ml-5 sm:text-sm sm:m-1 mt-4 sm:whitespace-nowrap sm:text-center sm:mt-4 4 md:text-xs lg:md:text-base xl:mr-20"
+          >
+            Marketing | $2,000 -5,000 /Monthly
+          </p>
+        </div>
+        <button class="apply-btn md:w-full md:text-center">Apply Now</button>
       </div>
 
-      <div class="border rounded border-black shadow-lg p-4 m-2">
-        <div class="flex">
+      <div class="border rounded shadow-md p-4 m-2">
+        <div class="flex flex-wrap md:flex-nowrap md:mr-1">
           <p
-            class="border border-black rounded-full py-1 px-4 mx-1 shadow-md sm:text-sm"
+            class="border border-black text-sm rounded-full py-1 px-4 md:px-1 lg:px-2 mx-1 md:mx-1 shadow-md sm:text-sm lg:text-sm lg:items-center md:text-xs md:py-0 md:whitespace-nowrap"
           >
             Full Time
           </p>
           <p
-            class="border border-black rounded-full py-1 px-4 mx-1 shadow-md sm:text-sm"
+            class="border border-black rounded-full py-1 px-4 mx-1 shadow-md sm:text-sm md:text-xs lg:text-sm lg:items-center md:py-0 md:whitespace-nowrap"
           >
             Glendale CA
           </p>
         </div>
-        <div class="flex gap-2 items-center ml-2">
-          <span
-            class="mdi mdi-twitter text-xl border border-black rounded-full py-0 px-1 mt-2 text-[#1DA1F2]"
-          ></span>
-          <p class="text-1xl mt-3 font-bold">Marketing Specialist</p>
-        </div>
-        <p class="ml-5 sm:m-1 mt-4 sm:whitespace-nowrap sm:text-center sm:mt-3">
-          Marking | $2,000 -5,000 /Monthly
-        </p>
-        <button class="apply-btn">Apply Now</button>
-      </div>
 
-      <div class="border rounded border-black shadow-lg p-4 m-2">
-        <div class="flex">
-          <p
-            class="border border-black rounded-full py-1 px-4 mx-1 shadow-md sm:text-sm"
-          >
-            Full Time
-          </p>
-          <p
-            class="border border-black rounded-full py-1 px-4 mx-1 shadow-md sm:text-sm"
-          >
-            Glendale CA
-          </p>
-        </div>
         <div class="flex gap-2 items-center ml-2">
           <span
-            class="mdi mdi-linkedin text-xl border border-black rounded-full py-0 px-1 mt-2 text-[#0077B5]"
+            class="mdi mdi-linkedin text-xl sm:mt-4 border border-black rounded-full py-0 px-1 mt-2 text-[#0077B5]"
           ></span>
-          <p class="text-1xl mt-3 font-bold">Business Analyst</p>
+          <p class="text-1xl mt-3 font-bold sm:mt-4 lg:md:text-lg">
+            Business Analyst
+          </p>
         </div>
-        <p class="ml-5 sm:m-1 mt-4 sm:whitespace-nowrap sm:text-center sm:mt-3">
-          Marking | $2,000 -5,000 /Monthly
-        </p>
-        <button class="apply-btn">Apply Now</button>
+        <div class="lg:ml-3">
+          <p
+            class="ml-5 sm:text-sm sm:m-1 mt-4 sm:whitespace-nowrap sm:text-center sm:mt-4 md:text-xs lg:text-base xl:mr-20"
+          >
+            Marketing | $2,000 -5,000 /Monthly
+          </p>
+        </div>
+        <button
+          class="apply-btn md:w-full md:text-center md:flex md:justify-center md:items-center"
+        >
+          Apply Now
+        </button>
       </div>
     </section>
   </body>
