Added more on my responsiveness of my pages

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
           <div class="flex h-full items-center justify-center">
             <div class="text-white px-4">
               <h1
-                class="mb-6 text-4xl sm:text-4xl sm:mt font-semibold md:text-6xl lg:text-5xl sm:capitalize leading-tight md:leading-snug lg:leading-tight xl:text-6xl"
+                class="mb-6 text-4xl sm:text-4xl sm:mt font-semibold md:text-6xl lg:text-5xl sm:capitalize leading-tight md:leading-snug lg:leading-tight xl:text-6xl 2xl:text-6xl"
               >
                 Bringing your dream <br />
                 job closer
@@ -81,25 +81,23 @@
       </div>
     </header>
 
-    <section class="flex justify-center sm:mb-4 sm:mx-17 lg:mt-8">
+    <section>
       <div
-        class="flex justify-between items-center text-4xl pt-16 mx-14 w-full max-w-6xl"
+        class="flex justify-between items-center mt-10 mb-1 sm:mx-16 sm:mt-5 sm:mb-5 mx-10 md:mx-1 lg:mx-5 xl:max-w-6xl xl:mx-auto 2xl:max-w-[1375px] 2lx:mx-auto 2xl:mt-20 2xl:mb-25"
       >
         <h3
-          class="font-semibold sm:whitespace-nowrap sm:mr-20 whitespace-nowrap text-xl sm:text:xl lg:text-3xl xl:text-4xl xl:ml-4"
+          class="text-xl font-semibold sm:text-2xl md:text-3xl lg:text-4xl capitalize"
         >
-          Our Features Jobs
+          Your feature job
         </h3>
         <button
-          type="button"
-          class="rounded-full bg-black sm:whitespace-nowrap text-white px-5 text-xs sm:text:xs font-medium capitalize flex items-center xl:mr-6"
+          class="rounded-full bg-black text-center :whitespace-nowrap text-white px-7 py-1 text-xs"
         >
-          view all
-          <span class="mdi mdi-arrow-right text-lg"></span>
+          View All
+          <span class="mdi mdi-arrow-right text-lg ml-2"></span>
         </button>
       </div>
     </section>
-
     <!-- THis is the job features -->
     <section
       class="grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 gap-2 mx-10 md:mx-1 lg:mx-5 xl:max-w-6xl xl:mx-auto 2xl:max-w-[1375px] 2lx:mx-auto"
