Added the card section and the job categories

--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
           Your feature job
         </h3>
         <button
-          class="rounded-full bg-black text-center :whitespace-nowrap text-white px-7 py-1 text-xs"
+          class="rounded-full bg-black text-center whitespace-nowrap text-white px-7 py-1 text-xs"
         >
           View All
           <span class="mdi mdi-arrow-right text-lg ml-2"></span>
@@ -304,6 +304,180 @@
         >
           Apply Now
         </button>
+      </div>
+    </section>
+
+    <div>
+      <h3 class="text-3xl text-center mt-10 font-bold capitalize">
+        Our Categories
+      </h3>
+    </div>
+
+    <!-- This section give the list of job by thier categories  -->
+    <section class="flex mb-16 mx-20 justify-center gap-4 mt-8 flex-wrap">
+      <div class="card-container flex-1 max-w-[120px]">
+        <div
+          class="card border rounded shadow-md p-4 text-center bg-white text-black border-black hover:bg-black hover:text-white duration-250"
+        >
+          <div
+            class="icon-container inline-block bg-gray-300 rounded-full px-1 hover:bg-white"
+          >
+            <span
+              class="mdi mdi-laptop text-2xl items-center hover:text-black text-black"
+            ></span>
+          </div>
+          <p
+            class="text-sm mt-2 overflow-hidden text-ellipsis whitespace-nowrap capitalize font-bold"
+          >
+            Web Developpment
+          </p>
+        </div>
+      </div>
+
+      <div class="card-container flex-1 max-w-[120px]">
+        <div
+          class="card border rounded shadow-md p-4 text-center bg-white text-black border-black hover:bg-black hover:text-white duration-250"
+        >
+          <div
+            class="icon-container inline-block bg-gray-300 rounded-full px-1 hover:bg-white"
+          >
+            <span
+              class="mdi mdi-laptop text-2xl items-center hover:text-black text-black"
+            ></span>
+          </div>
+          <p
+            class="text-sm mt-2 overflow-hidden text-ellipsis whitespace-nowrap capitalize font-bold"
+          >
+            software engibeerung
+          </p>
+        </div>
+      </div>
+
+      <div class="card-container flex-1 max-w-[120px]">
+        <div
+          class="card border rounded shadow-md p-4 text-center bg-white text-black border-black hover:bg-black hover:text-white duration-250"
+        >
+          <div
+            class="icon-container inline-block bg-gray-300 rounded-full px-1 hover:bg-white"
+          >
+            <span
+              class="mdi mdi-laptop text-2xl items-center hover:text-black text-black"
+            ></span>
+          </div>
+          <p
+            class="text-sm mt-2 overflow-hidden text-ellipsis whitespace-nowrap capitalize font-bold"
+          >
+            Data Entry
+          </p>
+        </div>
+      </div>
+
+      <div class="card-container flex-1 max-w-[120px]">
+        <div
+          class="card border rounded shadow-md p-4 text-center bg-white text-black border-black hover:bg-black hover:text-white duration-250"
+        >
+          <div
+            class="icon-container inline-block bg-gray-300 rounded-full px-1 hover:bg-white"
+          >
+            <span
+              class="mdi mdi-laptop text-2xl items-center hover:text-black text-black"
+            ></span>
+          </div>
+          <p
+            class="text-sm mt-2 overflow-hidden text-ellipsis whitespace-nowrap font-bold"
+          >
+            Marketing
+          </p>
+        </div>
+      </div>
+
+      <div class="card-container flex-1 max-w-[120px]">
+        <div
+          class="card border rounded shadow-md p-4 text-center bg-white text-black border-black hover:bg-black hover:text-white duration-250"
+        >
+          <div
+            class="icon-container inline-block bg-gray-300 rounded-full px-1 hover:bg-white"
+          >
+            <span
+              class="mdi mdi-laptop text-2xl items-center hover:text-black text-black"
+            ></span>
+          </div>
+          <p
+            class="text-sm mt-2 overflow-hidden text-ellipsis whitespace-nowrap capitalize font-bold"
+          >
+            Graphic Designer
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!--This is the blog section of our pages -->
+    <h3 class="mb-5 ml-[145px] font-semibold text-3xl capitalize">Our articles</h3>
+    <section class="flex justify-center space-x-4 mb-10">
+      <!-- First Card -->
+      <div class="max-w-xs bg-white rounded-lg overflow-hidden">
+        <div>
+          <img
+            class="w-[100%] object-cover rounded-t-lg"
+            src="https://mdbootstrap.com/img/new/textures/small/148.jpg"
+            alt=""
+          />
+        </div>
+        <div class="p-4 text-surface shadow-md rounded-b-lg bg-gray-100">
+          <h5 class="mb-2 text-xl font-medium leading-tight">Card title</h5>
+          <p class="mb-4 text-base text-gray-700">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <div class="flex items-center">
+            <a href="#" class="uppercase font-bold text-sm">Read More</a>
+            <span class="mdi mdi-arrow-right-thin text-3xl"></span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Second Card -->
+      <div class="max-w-xs w-full bg-white rounded-lg overflow-hidden">
+        <div>
+          <img
+            class="w-[100%] object-cover rounded-t-lg"
+            src="https://mdbootstrap.com/img/new/textures/small/148.jpg"
+            alt=""
+          />
+        </div>
+        <div class="p-4 text-surface shadow-md rounded-b-lg bg-gray-100">
+          <h5 class="mb-2 text-xl font-medium leading-tight">Card title</h5>
+          <p class="mb-4 text-base text-gray-700">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content. 
+          </p>
+          <div class="flex items-center">
+            <a href="#" class="uppercase font-bold  text-sm">Read More</a>
+            <span class="mdi mdi-arrow-right-thin text-3xl"></span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Third Card -->
+      <div class="max-w-xs w-full bg-white rounded-lg overflow-hidden">
+        <div>
+          <img
+            class="w-[100%] object-cover rounded-t-lg"
+            src="https://mdbootstrap.com/img/new/textures/small/148.jpg"
+            alt=""
+          />
+        </div>
+        <div class="p-4 text-surface shadow-lg rounded-b-lg bg-gray-100">
+          <h5 class="mb-2 text-xl font-medium leading-tight">Card title</h5>
+          <p class="mb-4 text-base text-gray-700">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <div class="flex items-center">
+            <a href="#" class="uppercase font-bold text-sm ">Read More</a>
+            <span class="mdi mdi-arrow-right-thin text-3xl"></span>
+          </div>
+        </div>
       </div>
     </section>
   </body>
