--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,14 @@
       href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css"
     />
     <link rel="stylesheet" href="output.css" />
+    <script defer src="../public/app.js"></script>
     <title>FindJobLineria</title>
   </head>
   <body>
-    <nav class="bg-slate-950 p-1 sticky top-0">
+    <nav class="bg-slate-950 sticky top-0 z-100 w-full shadow-md">
       <!-- This is the navitation -->
       <div
-        class="flex items-center justify-between flex-wrap xl:mx-20 lg:mx-30"
+        class="container flex mx-auto px-4 py-0 items-center justify-between flex-wrap"
       >
         <div class="text-white font-bold text-xl uppercase">
           FindJob Liberia
@@ -314,7 +315,9 @@
     </div>
 
     <!-- This section give the list of job by thier categories  -->
-    <section class="flex mb-16 mx-20 justify-center gap-4 mt-8 flex-wrap">
+    <section
+      class="flex flex-col md:flex-row mb-16 mx-20 justify-center items-center gap-4 mt-8"
+    >
       <div class="card-container flex-1 max-w-[120px]">
         <div
           class="card border rounded shadow-md p-4 text-center bg-white text-black border-black hover:bg-black hover:text-white duration-250"
@@ -411,21 +414,27 @@
       </div>
     </section>
 
-    <!--This is the blog section of our pages -->
-    <h3 class="mb-5 ml-[145px] font-semibold text-3xl capitalize">Our articles</h3>
-    <section class="flex justify-center space-x-4 mb-10">
+    <section
+      class="container mx-auto flex flex-col md:flex-row mb-16 justify-center items-center gap-4 md:gap-2 md:px-2 mt-8 px-4"
+    >
       <!-- First Card -->
-      <div class="max-w-xs bg-white rounded-lg overflow-hidden">
+      <div
+        class="w-full max-w-xs sm:max-w-md md:max-w-[300px] lg:max-w-sm bg-white rounded-lg"
+      >
         <div>
           <img
-            class="w-[100%] object-cover rounded-t-lg"
-            src="https://mdbootstrap.com/img/new/textures/small/148.jpg"
+            class="w-full h-[240px] md:h-[200px] object-cover rounded-t-lg"
+            src="../public/img/image1.jpg"
             alt=""
           />
         </div>
-        <div class="p-4 text-surface shadow-md rounded-b-lg bg-gray-100">
-          <h5 class="mb-2 text-xl font-medium leading-tight">Card title</h5>
-          <p class="mb-4 text-base text-gray-700">
+        <div class="shadow-md px-2">
+          <h5
+            class="mb-2 text-xl font-medium leading-tight mt-3 md:text-sm lg:text-xl text-pretty"
+          >
+            Liberian Job institute
+          </h5>
+          <p class="mb-4 text-base text-gray-700 mt-5 md-text-sm">
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
@@ -437,44 +446,56 @@
       </div>
 
       <!-- Second Card -->
-      <div class="max-w-xs w-full bg-white rounded-lg overflow-hidden">
+      <div
+        class="w-full max-w-xs sm:max-w-md md:max-w-[300px] lg:max-w-sm bg-white rounded-lg"
+      >
         <div>
           <img
-            class="w-[100%] object-cover rounded-t-lg"
-            src="https://mdbootstrap.com/img/new/textures/small/148.jpg"
+            class="w-full h-[240px] md:h-[200px] object-cover rounded-t-lg"
+            src="../public/img/image2.jpg"
             alt=""
           />
         </div>
-        <div class="p-4 text-surface shadow-md rounded-b-lg bg-gray-100">
-          <h5 class="mb-2 text-xl font-medium leading-tight">Card title</h5>
-          <p class="mb-4 text-base text-gray-700">
+        <div class="shadow-md px-2">
+          <h5
+            class="mb-2 text-xl font-medium leading-tight mt-3 md:text-sm lg:text-xl text-pretty"
+          >
+            Impact of AI in the Workplace
+          </h5>
+          <p class="mb-4 text-base text-gray-700 mt-5">
             Some quick example text to build on the card title and make up the
-            bulk of the card's content. 
+            bulk of the card's content.
           </p>
           <div class="flex items-center">
-            <a href="#" class="uppercase font-bold  text-sm">Read More</a>
+            <a href="#" class="uppercase font-bold text-sm">Read More</a>
             <span class="mdi mdi-arrow-right-thin text-3xl"></span>
           </div>
         </div>
       </div>
 
       <!-- Third Card -->
-      <div class="max-w-xs w-full bg-white rounded-lg overflow-hidden">
+      <div
+        class="w-full max-w-xs sm:max-w-md md:max-w-[300px] lg:max-w-sm bg-white rounded-lg"
+      >
         <div>
           <img
-            class="w-[100%] object-cover rounded-t-lg"
-            src="https://mdbootstrap.com/img/new/textures/small/148.jpg"
+            class="w-full h-[240px] md:h-[200px] object-cover rounded-t-lg"
+            src="../public/img/image3.jpg"
             alt=""
           />
         </div>
-        <div class="p-4 text-surface shadow-lg rounded-b-lg bg-gray-100">
-          <h5 class="mb-2 text-xl font-medium leading-tight">Card title</h5>
-          <p class="mb-4 text-base text-gray-700">
+        <div class="shadow-md px-2">
+          <h5
+            class="mb-2 text-xl font-medium leading-tight mt-3 md:text-sm lg:text-xl whitespace-nowrap text-pretty"
+          >
+            Thousands of Liberians jobs at stake
+          </h5>
+          <p class="mb-4 text-base text-gray-700 mt-5">
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
           <div class="flex items-center">
-            <a href="#" class="uppercase font-bold text-sm ">Read More</a>
+            <a href="#" class="uppercase font-bold text-sm">Read More</a>
             <span class="mdi mdi-arrow-right-thin text-3xl"></span>
           </div>
         </div>
