Add the the footer

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <title>FindJobLineria</title>
   </head>
   <body>
-    <nav class="bg-slate-950 sticky top-0 z-100 w-full shadow-md">
+    <nav class="bg-slate-950 sticky top-0 z-50 w-full shadow-md">
       <!-- This is the navitation -->
       <div
         class="container flex mx-auto px-4 py-0 items-center justify-between flex-wrap"
@@ -501,5 +501,110 @@
         </div>
       </div>
     </section>
+
+    <!-- Footer container -->
+    <!-- Option 1: Using margin top and padding -->
+    <footer
+      class="flex flex-col items-center bg-black text-center text-surface text-white lg:text-left mt-[120px] pt-10"
+    >
+      <div class="container p-6">
+        <div class="grid place-items-center md:grid-cols-2 lg:grid-cols-4">
+          <!-- First links section -->
+          <div class="mb-6">
+            <h5 class="mb-2.5 font-bold uppercase">Company</h5>
+
+            <ul class="mb-0 list-none">
+              <li>
+                <a href="#!">Blogs</a>
+              </li>
+              <li>
+                <a href="#!">jobs</a>
+              </li>
+              <li>
+                <a href="#!">Categories</a>
+              </li>
+              <li>
+                <a href="#!">Testimonials</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Second links section -->
+          <div class="mb-6">
+            <h5 class="mb-2.5 font-bold uppercase">Helps</h5>
+
+            <ul class="mb-0 list-none">
+              <li>
+                <a href="#!">Customer Support</a>
+              </li>
+              <li>
+                <a href="#!">Contact Us</a>
+              </li>
+              <li>
+                <a href="#!">Term & Condition</a>
+              </li>
+              <li>
+                <a href="#!">Privacy Policy</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Third links section -->
+          <div class="mb-6">
+            <h5 class="mb-2.5 font-bold uppercase">Resources</h5>
+
+            <ul class="mb-0 list-none">
+              <li>
+                <a href="#!">Blogs</a>
+              </li>
+              <li>
+                <a href="#!">jobs</a>
+              </li>
+              <li>
+                <a href="#!">Categories</a>
+              </li>
+              <li>
+                <a href="#!">Testimonials</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Fourth links section -->
+          <div class="mb-6">
+            <h5 class="mb-2.5 font-bold uppercase">Social Media</h5>
+
+            <ul class="mb-0 list-none text-center">
+              <li>
+                <a href="#!"><span class="mdi mdi-facebook text-blue-700"></span></a>
+              </li>
+              <li>
+                <a href="#!"><span class="mdi mdi-linkedin"></span></a>
+              </li>
+              <li>
+                <a href="#!"><span class="mdi mdi-alpha-x"></span></a>
+              </li>
+              <li>
+                <a href="#!">
+                  <span class="mdi mdi-youtube-subscription"></span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-full">
+        <!-- Horizontal line -->
+        <hr
+          class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8"
+        />
+
+        <!-- Copyright section -->
+        <div class="w-full bg-black/5 p-4 text-center">
+          © 2024 Copyright:
+          <a href="https://tw-elements.com/">FindJobLiberia</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
